objects/ddt_dynamic_001__Dynamic_Table_Object_Configuration__c.object
<CustomObject>
    <description>This object is used to set object level configuration for dynamic data table.</description>
    <fields>
        <fullName>ddt_dynamic_001__DataType__c</fullName>
        <label>DataType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddt_dynamic_001__Inline_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inline Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddt_dynamic_001__Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddt_dynamic_001__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddt_dynamic_001__Pagination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pagination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddt_dynamic_001__Parent_Field_API__c</fullName>
        <label>Parent Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddt_dynamic_001__Records_per_page__c</fullName>
        <label>Records per page</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ddt_dynamic_001__Pagination__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ddt_dynamic_001__Search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddt_dynamic_001__Sequence_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sequence Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddt_dynamic_001__Serverside_Searching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Serverside Searching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddt_dynamic_001__Sorting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sorting</label>
        <type>Checkbox</type>
    </fields>
    <label>Dynamic Table Object Configuration</label>
    <listViews>
        <fullName>ddt_dynamic_001__All</fullName>
        <columns>NAME</columns>
        <columns>ddt_dynamic_001__Object_API_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dynamic Table Object Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dynamic Table Object Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ddt_dynamic_001__Name_already_exist</fullName>
        <active>true</active>
        <errorConditionFormula>Name = VLOOKUP($ObjectType.ddt_dynamic_001__Dynamic_Table_Object_Configuration__c.Fields.Name, $ObjectType.ddt_dynamic_001__Dynamic_Table_Object_Configuration__c.Fields.Name , Name)  &amp;&amp;   ISNEW()</errorConditionFormula>
        <errorMessage>Record already exists with the same name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ddt_dynamic_001__Records_per_page_can_not_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ddt_dynamic_001__Pagination__c = true &amp;&amp; ISPICKVAL(ddt_dynamic_001__Records_per_page__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>ddt_dynamic_001__Records_per_page__c</errorDisplayField>
        <errorMessage>Please enter value</errorMessage>
    </validationRules>
</CustomObject>